--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1,22 +1,39 @@
+[data-tts-block-id].tts-active {
+    background : rgb(206, 225, 255, 0.9) !important ;
+}
+[data-tts-sentence-id].tts-active {
+    background : rgb(0, 89, 191, 0.7) !important ;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
 }
 
 h1 {
+    margin: 1rem;
+    font-size: 1.5em;
     text-align: center;
     margin-top: 30px;
     color: navy;
 }
 
 form {
-    max-width: 600px;
+    max-width: 500px;
     margin: 0 auto;
+    padding: 1em;
+    border: 3px solid #333333;
+    border-radius: 1rem;
     background-color: #fff;
-    padding: 30px;
-    border-radius: 8px;
+    display: grid;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -28,12 +45,10 @@ label {
     font-size: 18px;
     font-weight: bold;
     color: #333333;
+    padding: .5em;
 }
 
-input[type="text"],
-textarea,
-select,
-input[type="number"] {
+input[type="text"], textarea, select, input[type="number"] {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -44,7 +59,7 @@ input[type="number"] {
 
 button[type="submit"] {
     display: block;
-    width: 100%;
+    width: 10em;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
