--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -508,7 +508,7 @@ figcaption {
     grid-column : 1/6;
     grid-row : 1/3;
     margin : 0 1em;
-    background-color : rgb(255, 255, 255, 0.515);
+    background-color : rgba(255, 255, 255, 0.515);
 }
 
 .contact-fields {
