--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -508,7 +508,7 @@ figcaption {
     grid-column : 1 / 6;
     grid-row : 1 / 3;
     margin : 0 1em;
-    background-color : rgba(90, 189, 219, 0.515);
+    background-color : rgba(59, 148, 175, 0.304);
 }
 
 .contact-fields {
@@ -519,12 +519,13 @@ figcaption {
 
 input, label, textarea, select {
     font-size : 18px;
+    padding: 10px;
 }
 
 label {
     margin-top : 20px;
     margin-bottom : 5px;
-    color : aquamarine;
+    color : rgb(179, 245, 224);
     letter-spacing : 0.5px;
 }
 
