--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,4 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap') ;
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+[data-tts-block-id].tts-active {
+    background : rgb(206, 225, 255, 0.9) !important ;
+}
+[data-tts-sentence-id].tts-active {
+    background : rgb(0, 89, 191, 0.7) !important ;
+}
+
+* {
+    margin : 0;
+    padding : 0;
+    box-sizing : border-box;
+}
 
 :root {
     --primary-color: #dadccc;
@@ -20,31 +33,59 @@
     --paragraph-font: 'Roboto', 'san-serif';
 }
 
-[data-tts-block-id].tts-active {
-background : rgb(206, 225, 255, 0.9) !important ;
-}
-
-[data-tts-sentence-id].tts-active {
-background : rgb(0, 89, 191, 0.7) !important ;
-}
-
 body {
-font-family : "Roboto", sans-serif;
-max-width : 960px;
-padding : 20px;
+    font-family: var(--paragraph-font);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--heading-font);
+    color: var(--secondary-color);
+}
+
+*, *:before, *:after {
+    box-sizing : border-box;
+}
+
+h1 {
+    font-size : 3rem;
 }
 
 h2 {
-font-family : "Permanent Marker", cursive;
+    font-size : 2.5rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
-color : #385c5d;
+h3 {
+    font-size : 2rem;
+}
+
+h4 {
+    font-size : 1.5rem;
+}
+
+h5 {
+    font-size : 1.25rem;
+}
+
+h6 {
+    font-size : 1rem;
+}
+
+
+header, main, footer {
+    max-width : 1280px;
+    margin : auto;
 }
 
 header {
-padding : 20px;
-background-color : #dadccc;
+    display : grid;
+    grid-template-columns : 200px auto;
+    align-items : center;
+    background-color : #3f3f3f;
 }
 
 p {
